@@ -10,6 +10,7 @@
 * Culqi: Add new gateway [shasum]
 * WePay: Remove null address fields from request [davidsantoso]
 * Remove support for Ruby 2.0 [jasonwebster]
+* CardStream: Add dynamic descriptor option fields [curiousepic]
 
 == Version 1.62.0 (December 5, 2016)
 * AuthorizeNet: Map to standard AVSResult codes [shasum]
